--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^1.5.1",
+    "crypto": "^1.0.1",
+    "crypto-js": "^4.2.0",
+    "md5-hash": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.1",
